Settings views update

--- a/bot/admin/web/src/app/bot/story/story.component.html
+++ b/bot/admin/web/src/app/bot/story/story.component.html
@@ -223,7 +223,7 @@
                 nbButton
                 ghost
                 shape="round"
-                nbTooltip="Customise"
+                nbTooltip="Customise answer by bot application configuration"
                 (click)="customiseMainAnswer()"
               >
                 <nb-icon icon="copy-outline"></nb-icon>
@@ -290,7 +290,7 @@
                   nbButton
                   ghost
                   shape="round"
-                  nbTooltip="Customise"
+                  nbTooltip="Customise actions by bot application configuration"
                   (click)="addCustomSteps()"
                 >
                   <nb-icon icon="copy-outline"></nb-icon>
