--- a/nlp/admin/web/src/app/applications/namespace/namespaces.component.scss
+++ b/nlp/admin/web/src/app/applications/namespace/namespaces.component.scss
@@ -13,23 +13,10 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
-.builds {
-  margin-top: 20px;
-}
-
-.builds-table {
-  width: 100%;
-}
-
-.data {
-  max-width: 50px;
-}
-
-.error {
-  max-width: 50px;
-}
-
-.table thead tr th p {
-  font-weight: bold;
+.grid-actions {
+  display: grid;
+  grid-gap: 0.5rem;
+  grid-auto-flow: column;
+  align-items: center;
+  justify-content: end;
 }
