--- a/nlp/admin/web/src/app/applications/application/application.component.scss
+++ b/nlp/admin/web/src/app/applications/application/application.component.scss
@@ -17,6 +17,14 @@
 @import '@nebular/theme/styles/theming';
 @import '@nebular/theme/styles/themes';
 
+.grid-actions {
+  display: grid;
+  grid-gap: 0.5rem;
+  grid-auto-flow: column;
+  align-items: center;
+  justify-content: end;
+}
+
 @include nb-install-component() {
   .label {
     &.required {
@@ -35,7 +43,7 @@
     display: inline-flex;
     width: fit-content;
     max-width: 8rem;
-    padding: 0.3rem 1rem 0.3rem 1rem;
+    padding: 0.3rem 0.6rem 0.3rem 1rem;
     margin-right: 2px;
     margin-bottom: 2px;
     border-radius: 10rem;
@@ -44,42 +52,5 @@
     font-size: 0.9rem;
     line-height: 1.25rem;
     white-space: nowrap;
-    cursor: pointer;
   }
-}
-
-.locales {
-  padding-left: 20px;
-}
-
-.select-locale {
-  padding-top: 20px;
-  padding-bottom: 20px;
-  width: 200px;
-  margin: 0 16px;
-}
-
-.separator {
-  padding-right: 10px;
-}
-
-.divider {
-  height: 10px;
-}
-
-.engine-type {
-  margin-left: 20px;
-}
-
-.application-name {
-  margin-right: 10px;
-}
-
-.save {
-  color: #3366ff;
-  cursor: pointer;
-}
-
-.cancel {
-  cursor: pointer;
 }
