--- a/nlp/admin/web/src/app/applications/applications/applications.component.html
+++ b/nlp/admin/web/src/app/applications/applications/applications.component.html
@@ -49,19 +49,20 @@
 <nb-card
   *ngFor="let app of state.applications"
   class="mb-2"
+  [nbSpinner]="loading"
 >
   <nb-card-body>
     <div class="d-flex gap-1 align-items-center">
       <nb-toggle
         *ngIf="app._id === state.currentApplication._id"
         checked="true"
-        class="mb-0 nb-toggle-clear-bottom-margin unClickable"
+        class="mb-0 nb-toggle-reset-label-margin unClickable"
       ></nb-toggle>
       <nb-toggle
         *ngIf="app._id !== state.currentApplication._id"
         checked="false"
         (checkedChange)="selectApplication(app)"
-        class="mb-0 nb-toggle-clear-bottom-margin"
+        class="mb-0 nb-toggle-reset-label-margin"
         nbTooltip="Set as current application"
       ></nb-toggle>
 
@@ -104,6 +105,18 @@
         nbTooltip="Edit application"
       >
         <nb-icon icon="edit"></nb-icon>
+      </button>
+
+      <button
+        *ngIf="isAdmin()"
+        nbButton
+        ghost
+        shape="round"
+        status="danger"
+        (click)="deleteApplication(app)"
+        nbTooltip="Delete application"
+      >
+        <nb-icon icon="trash-2-outline"></nb-icon>
       </button>
     </div>
   </nb-card-body>
