--- a/nlp/admin/web/src/app/applications/application/application.component.html
+++ b/nlp/admin/web/src/app/applications/application/application.component.html
@@ -36,7 +36,7 @@
 
     <button
       nbButton
-      status="primary"
+      status="warning"
       (click)="saveApplication()"
       [nbTooltip]="newApplication ? 'Create New Application' : 'Update Application'"
     >
